@@ -1,8 +1,8 @@
 # --
 # Kernel/Output/HTML/TicketOverviewSmall.pm
-# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: TicketOverviewSmall.pm,v 1.50 2011/11/28 07:57:28 mg Exp $
+# $Id: TicketOverviewSmall.pm,v 1.51 2012/02/16 23:54:41 cr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -20,7 +20,7 @@ use Kernel::System::DynamicField::Backend;
 use Kernel::System::VariableCheck qw(:all);
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.50 $) [1];
+$VERSION = qw($Revision: 1.51 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -404,7 +404,7 @@ sub Run {
                 $Self->{LayoutObject}->Block(
                     Name => 'OverviewNavBarPageDynamicField_'
                         . $DynamicFieldConfig->{Name}
-                        . 'Sortable_',
+                        . '_Sortable',
                     Data => {
                         %Param,
                         OrderBy          => $OrderBy,
@@ -441,7 +441,7 @@ sub Run {
                 $Self->{LayoutObject}->Block(
                     Name => 'OverviewNavBarPageDynamicField_'
                         . $DynamicFieldConfig->{Name}
-                        . 'NotSortable',
+                        . '_NotSortable',
                     Data => {
                         %Param,
                         Label => $Label,
